defense presentation generalizations

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -105,10 +105,13 @@
 }
 
 @book{caha2019,
-  title = {Case competition in Nanosyntax. A study of numeral phrases in Ossetic and Russian.},
+  title = {Case competition in Nanosyntax: A study of numerals in Ossetic and Russian},
   author = {Caha, Pavel},
-  year = {2019}
+  year = {2019},
+  location = {Berlin},
+  publisher = {Language Science Press}
 }
+
 
 @incollection{kiparsky1973,
   title = {``Elsewhere'' in Phonology},
