--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -49,6 +49,8 @@ for their time and advice.
 Not only did I enjoy your company as colleagues, I am also grateful that I can call some of you now good friends.
 Because of you I had a wonderful time in Frankfurt in and other places on the planet.
 
+Anke and Johannes
+
 During my three years as a PhD-student I was lucky enough to get the opportunity to visit the University of Pennsylvania in Philadelphia and the Masaryk University in Brno (twice). Thank you for giving me the chance to come and for the inspiration and ideas I got during my stays.
 I presented my work at
 ConSOLE XXVI in London,
