--- a/presentations/defense/defense-presentation_nopause.tex
+++ b/presentations/defense/defense-presentation_nopause.tex
@@ -48,7 +48,7 @@
 \title{Case competition in headless relatives}
 \author{Fenna Bergsma}
 \date{\today}
-\institute{\normalsize{Goethe-Universität Frankfurt}}
+\institute{\normalsize{Research Training Group `Nominal Modification'\\ Goethe-Universität Frankfurt}}
 
 
 
@@ -64,51 +64,46 @@
 }
 \end{frame}
 
-\begin{frame}[t]{Topic}
+\begin{frame}[t]{Introduction}
 
 \pause
 
 \exg. Ich {lade ein}, \textbf<3->{wem} \textbf<3->{auch} \textbf<3->{Maria} \textbf<3->{vertraut}.\\
- 1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor<6->{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor<8->{red}{\tsc{dat}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor<7->{red}{\scsub{[dat]}}\\
- `I invite whoever Maria also trusts.'
+ I invite\textcolor<6->{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor<9->{red}{\tsc{dat}} also Maria trust\textcolor<7->{red}{\scsub{[dat]}}\\
+ `I invite whoever Maria also trusts.' \hfill{(Modern German, \pgcitealt{vogel2001}{344})}
 
-\only<4>{
+\only<4,8>{
 \exg. Ich lade die Person ein, \textbf<3->{der} \textbf<3->{Maria} \textbf<3->{vertraut}.\\
- 1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}{\scsub{[acc]}} the person {} \tsc{rel}.\tsc{sg}.\tsc{f}.{\tsc{dat}} Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}{\scsub{[dat]}}\\
+ I invite\textcolor<8>{LimeGreen}{\scsub{[acc]}}
+ the.\textcolor<8>{LimeGreen}{\tsc{acc}} person {}
+ \tsc{rp}.\textcolor<8>{red}{\tsc{dat}} Maria.{\tsc{nom}}
+ trust\textcolor<8>{red}{\scsub{[dat]}}
+ \\
  `I invite the person that Maria trusts.'
  }
 
-\onslide<9>{
-\exg. *Ich {lade ein}, wen \tbf{auch} \tbf{Maria} \tbf{vertraut}.\\
- 1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor{LimeGreen}{\tsc{acc}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
- `I invite whoever Maria also trusts.'
- }
+ \vspace{1em}
 
-\end{frame}
-
-
-\begin{frame}[t]{Two generalizations}
-
-\pause
+\onslide<10->{two aspects determine grammaticality}
 
 \begin{enumerate}
-  \item the winner of the competition\pause
+  \item \onslide<11->{which cases are competing}
   \begin{itemize}
-      \onslide<4->{\item is stable across languages}
-      \onslide<5->{\item \tsc{nom} < \tsc{acc} < \tsc{dat}}
+      \onslide<12->{\item \tsc{nom} < \tsc{acc} < \tsc{dat}}
+      \onslide<13->{\item is stable across languages}
   \end{itemize}
-  \item whether the winner gets approved
+  \item \onslide<14->{where the competitors come from}
   \begin{itemize}
-      \onslide<6->{\item differs across languages}
-      \onslide<7->{\item \tsc{int}/\tsc{ext} approved}
+      \onslide<15->{\item internal (\tsc{int}) vs. external (\tsc{ext}) case}
+      \onslide<16->{\item differs across languages}
   \end{itemize}
 \end{enumerate}
 
 \vspace{1em}
 
-\onslide<8->{
+\onslide<17->{
 \begin{itemize}
-  \item \textbf<9>{illustrate the generalizations}\pause
+  \item \textbf<18>{illustrate the generalizations}\pause
   \item derive the generalizations
 \end{itemize}
 }
@@ -117,46 +112,50 @@
 
 
 
-\begin{frame}[t]{The winner of the competition in German (Vogel 2001)}
+\begin{frame}[t]{Which cases are competing (Vogel 2001)}
 
 \pause
 
 \center
-\textbf<9->{\tsc{nom} <} \textbf<5->{\tsc{acc} < \tsc{dat}}
+\textbf<6-8,9-11,12>{\tsc{nom}} \textbf<6-8,9-11,12>{<} \textbf<3-5,6-8,12>{\tsc{acc}} \textbf<3-5,12>{<} \textbf<3-5,9-11,12>{\tsc{dat}}
 
-\onslide<3->{
+\onslide<4->{
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor{red}{\tsc{dat}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
+I invite\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
 
-\only<4-5>{
+\only<5>{
 \exg. *Ich {lade ein}, wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor{LimeGreen}{\tsc{acc}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
+I invite.\tsc{pres}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
+
+\vspace{1em}
 
 \onslide<7->{
 \exg. Uns besucht, \tbf{wen} \tbf{Maria} \tbf{mag}.\\
-2\tsc{pl}.{\tsc{acc}} visit.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rel}.\tsc{an}.\textcolor{LimeGreen}{\tsc{acc}} Maria.{\tsc{nom}} like.\tsc{pres}.3\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}}\\
+us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
 `Who visits us, Maria likes.'
 }
 
-\only<8-9>{
+\only<8>{
 \exg. *Uns besucht, wer \tbf{Maria} \tbf{mag}.\\
-2\tsc{pl}.{\tsc{acc}} visit.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rel}.\tsc{an}.\textcolor{Turquoise}{\tsc{nom}} Maria.{\tsc{nom}} like.\tsc{pres}.3\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}}\\
+us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc{nom}} Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
 `Who visits us, Maria likes.'
 }
 
-\onslide<11-13>{
+\vspace{1em}
+
+\onslide<10-12>{
 \exg. Uns besucht, \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
-2\tsc{pl}.{\tsc{acc}} visit.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rel}.\tsc{an}.\textcolor{red}{\tsc{dat}} Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
+us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `Who visits us, Maria trusts.'
 }
 
-\only<12>{
+\only<11>{
 \exg. *Uns besucht, wer \tbf{Maria} \tbf{vertraut}.\\
-2\tsc{pl}.{\tsc{acc}} visit.\tsc{pres}.3\tsc{sg}\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rel}.\tsc{an}.\textcolor{Turquoise}{\tsc{nom}} Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
+us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc{nom}} Maria trust\textcolor{red}{\scsub{[dat]}}\\
 `Who visits us, Maria trusts.'
 }
 
@@ -164,7 +163,7 @@
 
 
 
-\begin{frame}[t]{The winner of the competition in other languages}
+\begin{frame}[t]{Which cases are competing in other languages}
 
 \pause
 
@@ -203,6 +202,8 @@ approve \textbf<4>{\tsc{int}} or \tsc{ext} as a winner
 1\tsc{sg}.{\tsc{nom}} invite.\tsc{pres}.1\tsc{sg}\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rel}.\tsc{an}.\textcolor{red}{\tsc{dat}} also Maria.{\tsc{nom}} trust.\tsc{pres}.3\tsc{sg}\textcolor{red}{\scsub{[dat]}}\\
 `I invite whoever Maria also trusts.'
 }
+
+\vspace{1em}
 
 \onslide<6->{
 \exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
@@ -990,93 +991,93 @@ Properties of morphology show reflexes in syntax
 
 
 
-\begin{frame}[t]{\tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{m}/\tit{wen}}
-
-\pause
-
-\exg. *Ich vertraue \sout{m}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
-1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{lh}.\tsc{an}.\tsc{dat} \tsc{rp}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
-`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-rep-lh}
-
-\pause
-
-\begin{figure}[H]
-  \begin{adjustbox}{max height=0.5\textheight}
-  \centering
-    \begin{tabular}[b]{ccc}
-        \toprule
-        light head \tit{m} & & relative pronoun \tit{we-n} \\
-        \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-        \begin{forest} boom
-          [\tsc{dat}P,
-          tikz={
-          \node[label=below:\tit{m},
-          draw,circle,
-          scale=0.9,
-          fit to=tree]{};
-          }
-              [\tsc{k}3]
-              [\tsc{acc}P,
-              tikz={
-              \onslide<4>{
-              \node[draw,circle,
-              dashed,
-              scale=0.85,
-              fit to=tree]{};
-              }
-              }
-                  [\tsc{k}2]
-                  [\tsc{nomP}
-                      [\tsc{k}1]
-                      [ϕP
-                          [\phantom{xxx}, roof, baseline]
-                      ]
-                  ]
-              ]
-          ]
-        \end{forest}
-        & \phantom{x} &
-        \begin{forest} boom
-          [\tsc{rel}P
-              [\tsc{rel}P,
-              tikz={
-              \node[label=below:\tit{we},
-              draw,circle,
-              scale=0.75,
-              fit to=tree]{};
-              }
-                  [\phantom{xxx}, roof, baseline]
-              ]
-              [\tsc{acc}P,
-              tikz={
-              \onslide<4>{
-              \node[draw,circle,
-              dashed,
-              scale=0.85,
-              fit to=tree]{};
-              }
-              \node[label=below:\tit{n},
-              draw,circle,
-              scale=0.8,
-              fit to=tree]{};
-              }
-                  [\tsc{k}2]
-                  [\tsc{nomP}
-                      [\tsc{k}1]
-                      [ϕP
-                          [\phantom{xxx}, roof, baseline]
-                      ]
-                  ]
-              ]
-          ]
-        \end{forest}\\
-        \bottomrule
-    \end{tabular}
-    \label{fig:acc-nom-intonly}
-  \end{adjustbox}
-  \end{figure}
-
-\end{frame}
+% \begin{frame}[t]{\tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{m}/\tit{wen}}
+%
+% \pause
+%
+% \exg. *Ich vertraue \sout{m}, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
+% 1\tsc{sg}.\tsc{nom} trust.\tsc{pres}.1\tsc{sg}\scsub{[dat]} \tsc{lh}.\tsc{an}.\tsc{dat} \tsc{rp}.\tsc{an}.\tsc{acc} also Maria.\tsc{nom} like.\tsc{pres}.3\tsc{sg}\scsub{[acc]}\\
+% `I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-acc-rep-lh}
+%
+% \pause
+%
+% \begin{figure}[H]
+%   \begin{adjustbox}{max height=0.5\textheight}
+%   \centering
+%     \begin{tabular}[b]{ccc}
+%         \toprule
+%         light head \tit{m} & & relative pronoun \tit{we-n} \\
+%         \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+%         \begin{forest} boom
+%           [\tsc{dat}P,
+%           tikz={
+%           \node[label=below:\tit{m},
+%           draw,circle,
+%           scale=0.9,
+%           fit to=tree]{};
+%           }
+%               [\tsc{k}3]
+%               [\tsc{acc}P,
+%               tikz={
+%               \onslide<4>{
+%               \node[draw,circle,
+%               dashed,
+%               scale=0.85,
+%               fit to=tree]{};
+%               }
+%               }
+%                   [\tsc{k}2]
+%                   [\tsc{nomP}
+%                       [\tsc{k}1]
+%                       [ϕP
+%                           [\phantom{xxx}, roof, baseline]
+%                       ]
+%                   ]
+%               ]
+%           ]
+%         \end{forest}
+%         & \phantom{x} &
+%         \begin{forest} boom
+%           [\tsc{rel}P
+%               [\tsc{rel}P,
+%               tikz={
+%               \node[label=below:\tit{we},
+%               draw,circle,
+%               scale=0.75,
+%               fit to=tree]{};
+%               }
+%                   [\phantom{xxx}, roof, baseline]
+%               ]
+%               [\tsc{acc}P,
+%               tikz={
+%               \onslide<4>{
+%               \node[draw,circle,
+%               dashed,
+%               scale=0.85,
+%               fit to=tree]{};
+%               }
+%               \node[label=below:\tit{n},
+%               draw,circle,
+%               scale=0.8,
+%               fit to=tree]{};
+%               }
+%                   [\tsc{k}2]
+%                   [\tsc{nomP}
+%                       [\tsc{k}1]
+%                       [ϕP
+%                           [\phantom{xxx}, roof, baseline]
+%                       ]
+%                   ]
+%               ]
+%           ]
+%         \end{forest}\\
+%         \bottomrule
+%     \end{tabular}
+%     \label{fig:acc-nom-intonly}
+%   \end{adjustbox}
+%   \end{figure}
+%
+% \end{frame}
 
 
 
@@ -1186,7 +1187,7 @@ Properties of morphology show reflexes in syntax
 \begin{forest} boom
 [\tsc{acc}P,
 tikz={
-\onslide<4>{
+\onslide<4-5>{
 \node[label=below:\tit{sie},
 draw,circle,
 scale=0.825,
@@ -1408,8 +1409,8 @@ fit to=tree]{};
 
 \pause
 
-\exg. Jan lubi [ogo] \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+\exg. Jan lubi \sout{ogo} \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
 `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc-rep}
 
 \pause
@@ -1462,7 +1463,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.
         [\tsc{rel}P
             [\tsc{rel}P,
             tikz={
-            \node[label=below:\tit{o},
+            \node[label=below:\tit{k},
             draw,circle,
             scale=0.85,
             fit to=tree]{};
@@ -1514,135 +1515,135 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.
 
 
 
-\begin{frame}[t]{\tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{omu}/\tit{kogo} in Polish}
-
-\pause
-
-\exg. *Jan ufa \sout{omu} \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
-`Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-rel}
-
-\pause
-
-  \begin{figure}[H]
-    \begin{adjustbox}{max height=0.5\textheight}
-    \centering
-    \begin{tabular}[b]{ccc}
-      \toprule
-      light head \tit{o-mu} & & relative pronoun \tit{k-o-go} \\
-      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-      \begin{forest} boom
-        [\tsc{dat}P
-            [\tsc{ϕ}P,
-            tikz={
-            \onslide<4>{
-            \node[
-            draw,circle,
-            scale=0.85,
-            dashed,
-            fit to=tree]{};
-            }
-            \node[label=below:\tit{o},
-            draw,circle,
-            scale=0.85,
-            fit to=tree]{};
-            }
-                [\phantom{xxx}, roof]
-            ]
-            [\tsc{dat}P,
-            tikz={
-            \node[label=below:\tit{mu},
-            draw,circle,
-            scale=0.95,
-            fit to=tree]{};
-            }
-                [\tsc{k}3]
-                [\tsc{acc}P,
-                tikz={
-                \onslide<4>{
-                \node[
-                draw,circle,
-                scale=0.9,
-                dashed,
-                fit to=tree]{};
-                }
-                }
-                    [\tsc{k}2]
-                    [\tsc{nom}P
-                        [\tsc{k}1]
-                    ]
-                ]
-            ]
-        ]
-        \end{forest}
-      & \phantom{x} &
-      \begin{forest} boom
-        [\tsc{rel}P
-            [\tsc{rel}P,
-            tikz={
-            \node[label=below:\tit{k},
-            draw,circle,
-            scale=0.85,
-            fit to=tree]{};
-            }
-                [\phantom{xxx}, roof]
-            ]
-            [\tsc{acc}P
-                [\tsc{ϕ}P,
-                tikz={
-                \onslide<4>{
-                \node[
-                draw,circle,
-                scale=0.85,
-                dashed,
-                fit to=tree]{};
-                }
-                \node[label=below:\tit{o},
-                draw,circle,
-                scale=0.85,
-                fit to=tree]{};
-                }
-                    [\phantom{xxx}, roof]
-                ]
-                [\tsc{acc}P,
-                tikz={
-                \node[label=below:\tit{go},
-                draw,circle,
-                scale=0.9,
-                fit to=tree]{};
-                \onslide<4>{
-                \node[
-                draw,circle,
-                scale=0.95,
-                dashed,
-                fit to=tree]{};
-                }
-                }
-                    [\tsc{k}2]
-                    [\tsc{nom}P
-                        [\tsc{k}1]
-                    ]
-                ]
-            ]
-        ]
-      \end{forest}\\
-      \bottomrule
-    \end{tabular}
-  \end{adjustbox}
-   \label{fig:nom-acc-matching}
-  \end{figure}
-
-\end{frame}
-
-
+% \begin{frame}[t]{\tsc{ext}\scsub{dat} vs. \tsc{int}\scsub{acc} ↛ \tit{omu}/\tit{kogo} in Polish}
+%
+% \pause
+%
+% \exg. *Jan ufa \sout{omu} \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
+% Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+% `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-rel}
+%
+% \pause
+%
+%   \begin{figure}[H]
+%     \begin{adjustbox}{max height=0.5\textheight}
+%     \centering
+%     \begin{tabular}[b]{ccc}
+%       \toprule
+%       light head \tit{o-mu} & & relative pronoun \tit{k-o-go} \\
+%       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+%       \begin{forest} boom
+%         [\tsc{dat}P
+%             [\tsc{ϕ}P,
+%             tikz={
+%             \onslide<4>{
+%             \node[
+%             draw,circle,
+%             scale=0.85,
+%             dashed,
+%             fit to=tree]{};
+%             }
+%             \node[label=below:\tit{o},
+%             draw,circle,
+%             scale=0.85,
+%             fit to=tree]{};
+%             }
+%                 [\phantom{xxx}, roof]
+%             ]
+%             [\tsc{dat}P,
+%             tikz={
+%             \node[label=below:\tit{mu},
+%             draw,circle,
+%             scale=0.95,
+%             fit to=tree]{};
+%             }
+%                 [\tsc{k}3]
+%                 [\tsc{acc}P,
+%                 tikz={
+%                 \onslide<4>{
+%                 \node[
+%                 draw,circle,
+%                 scale=0.9,
+%                 dashed,
+%                 fit to=tree]{};
+%                 }
+%                 }
+%                     [\tsc{k}2]
+%                     [\tsc{nom}P
+%                         [\tsc{k}1]
+%                     ]
+%                 ]
+%             ]
+%         ]
+%         \end{forest}
+%       & \phantom{x} &
+%       \begin{forest} boom
+%         [\tsc{rel}P
+%             [\tsc{rel}P,
+%             tikz={
+%             \node[label=below:\tit{k},
+%             draw,circle,
+%             scale=0.85,
+%             fit to=tree]{};
+%             }
+%                 [\phantom{xxx}, roof]
+%             ]
+%             [\tsc{acc}P
+%                 [\tsc{ϕ}P,
+%                 tikz={
+%                 \onslide<4>{
+%                 \node[
+%                 draw,circle,
+%                 scale=0.85,
+%                 dashed,
+%                 fit to=tree]{};
+%                 }
+%                 \node[label=below:\tit{o},
+%                 draw,circle,
+%                 scale=0.85,
+%                 fit to=tree]{};
+%                 }
+%                     [\phantom{xxx}, roof]
+%                 ]
+%                 [\tsc{acc}P,
+%                 tikz={
+%                 \node[label=below:\tit{go},
+%                 draw,circle,
+%                 scale=0.9,
+%                 fit to=tree]{};
+%                 \onslide<4>{
+%                 \node[
+%                 draw,circle,
+%                 scale=0.95,
+%                 dashed,
+%                 fit to=tree]{};
+%                 }
+%                 }
+%                     [\tsc{k}2]
+%                     [\tsc{nom}P
+%                         [\tsc{k}1]
+%                     ]
+%                 ]
+%             ]
+%         ]
+%       \end{forest}\\
+%       \bottomrule
+%     \end{tabular}
+%   \end{adjustbox}
+%    \label{fig:nom-acc-matching}
+%   \end{figure}
+%
+% \end{frame}
 
 
-\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} ↛ \tit{ogo}/\tit{komu}}
+
+
+\begin{frame}[t]{\tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{dat} ↛ \tit{komu}}
 
 \pause
 
 \exg. *Jan lubi \sout{ogo} \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{lh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-rel}
 
 \pause
@@ -1655,7 +1656,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.
       light head \tit{o-go} & & relative pronoun \tit{k-o-mu}\\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-          [\tsc{acc}P
+          [\tsc{acc}P, s sep= 12mm
               [\tsc{ϕ}P,
               tikz={
               \onslide<4>{
@@ -1705,7 +1706,7 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.
             }
                 [\phantom{xxx}, roof]
             ]
-            [\tsc{dat}P
+            [\tsc{dat}P, s sep = 15 mm
                 [\tsc{ϕ}P,
                 tikz={
                 \onslide<4>{
@@ -1757,6 +1758,200 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.
 \end{frame}
 
 
+\begin{frame}{The difference between German and Polish}
+
+\pause
+
+\begin{figure}[H]
+  \begin{adjustbox}{max height=0.4\textheight}
+  \centering
+  \begin{tabular}[b]{ccc}
+    \toprule
+    light head \tit{o-go} & & relative pronoun \tit{k-o-mu}\\
+    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+    \begin{forest} boom
+        [\tsc{acc}P
+            [\tsc{ϕ}P,
+            tikz={
+            \onslide<4>{
+            \node[
+            draw,circle,
+            scale=0.9,
+            dashed,
+            fit to=tree]{};
+            }
+            \node[label=below:\tit{o},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof]
+            ]
+            [\tsc{acc}P,
+            tikz={
+            \node[label=below:\tit{go},
+            draw,circle,
+            scale=0.9,
+            fit to=tree]{};
+            \onslide<4>{
+            \node[
+            draw,circle,
+            scale=0.95,
+            dashed,
+            fit to=tree]{};
+            }
+            }
+                [\tsc{k}2]
+                [\tsc{nom}P
+                    [\tsc{k}1]
+                ]
+            ]
+        ]
+      \end{forest}
+    & \phantom{x} &
+    \begin{forest} boom
+      [\tsc{rel}P
+          [\tsc{rel}P,
+          tikz={
+          \node[label=below:\tit{k},
+          draw,circle,
+          scale=0.85,
+          fit to=tree]{};
+          }
+              [\phantom{xxx}, roof]
+          ]
+          [\tsc{dat}P
+              [\tsc{ϕ}P,
+              tikz={
+              \onslide<4>{
+              \node[
+              draw,circle,
+              scale=0.9,
+              dashed,
+              fit to=tree]{};
+              }
+              \node[label=below:\tit{o},
+              draw,circle,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\phantom{xxx}, roof]
+              ]
+              [\tsc{dat}P,
+              tikz={
+              \node[label=below:\tit{mu},
+              draw,circle,
+              scale=0.95,
+              fit to=tree]{};
+              }
+                  [\tsc{k}3]
+                  [\tsc{acc}P, tikz={
+                  \onslide<4>{
+                  \node[
+                  draw,circle,
+                  scale=0.9,
+                  dashed,
+                  fit to=tree]{};
+                  }
+                  }
+                      [\tsc{k}2]
+                      [\tsc{nom}P
+                          [\tsc{k}1]
+                      ]
+                  ]
+              ]
+          ]
+      ]
+    \end{forest}\\
+    \bottomrule
+  \end{tabular}
+\end{adjustbox}
+ \label{fig:nom-acc-matching}
+\end{figure}
+
+\pause
+
+  \begin{figure}[H]
+    \begin{adjustbox}{max height=0.4\textheight}
+    \centering
+      \begin{tabular}[b]{ccc}
+          \toprule
+          light head \tit{n} & & relative pronoun \tit{we-m}\\
+          \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+          \begin{forest} boom
+            [\tsc{acc}P,
+            tikz={
+            \onslide<4>{
+            \node[draw,circle,
+            dashed,
+            scale=0.85,
+            fill=DG,fill opacity=0.2,
+            fit to=tree]{};
+            }
+            \node[label=below:\tit{n},
+            draw,circle,
+            scale=0.8,
+            fit to=tree]{};
+            }
+                [\tsc{k}2]
+                [\tsc{nomP}
+                    [\tsc{k}1]
+                    [ϕP
+                        [\phantom{xxx}, roof, baseline]
+                    ]
+                ]
+            ]
+          \end{forest}
+          & \phantom{x} &
+          \begin{forest} boom
+            [\tsc{rel}P, s sep =15mm
+                [\tsc{rel}P,
+                tikz={
+                \node[label=below:\tit{we},
+                draw,circle,
+                scale=0.75,
+                fit to=tree]{};
+                }
+                    [\phantom{xxx}, roof, baseline]
+                ]
+                [\tsc{dat}P,
+                tikz={
+                \node[label=below:\tit{m},
+                draw,circle,
+                scale=0.9,
+                fit to=tree]{};
+                }
+                    [\tsc{k}3]
+                    [\tsc{acc}P,
+                    tikz={
+                    \onslide<4>{
+                    \node[draw,circle,
+                    dashed,
+                    scale=0.85,
+                    fit to=tree]{};
+                    }
+                    }
+                    [\tsc{k}2]
+                        [\tsc{nomP}
+                            [\tsc{k}1]
+                            [ϕP
+                                [\phantom{xxx}, roof, baseline]
+                            ]
+                        ]
+                    ]
+                ]
+            ]
+          \end{forest}\\
+          \bottomrule
+      \end{tabular}
+      \label{fig:nom-acc-intonly}
+    \end{adjustbox}
+    \end{figure}
+
+\end{frame}
+
+
+
 
 \begin{frame}[t]{}
 
@@ -1805,11 +2000,36 @@ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.
 
 \begin{frame}[t]{Again}
 
-  Properties of morphology show reflexes in syntax
+
 
 \end{frame}
 
 \begin{frame}[t]{Conclusion}
+
+  \begin{enumerate}
+    \item the winner of the competition
+    \begin{itemize}
+        \item is stable across languages
+        \item \tsc{nom} < \tsc{acc} < \tsc{dat}
+    \end{itemize}
+    \item whether the winner gets approved
+    \begin{itemize}
+        \item differs across languages
+        \item \tsc{int}/\tsc{ext} approved
+    \end{itemize}
+  \end{enumerate}
+
+  \pause
+
+\vspace{1em}
+
+It's all about containment
+
+  \pause
+
+  \vspace{1em}
+
+Properties of morphology show reflexes in syntax
 
 \end{frame}
 
