--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -434,7 +434,7 @@ When the relative clause is dislocated, both the internal and the external case 
 
 \citet{spyropoulos2011} argues that in these left-dislocated structures, there is a silent \tit{pro} or a clitic (\tit{ton} in \ref{ex:greek-dislocated-nom-acc}) that satisfies the external case. This allows the relative pronoun to take the internal case. This makes this construction more of a correlative.
 }\footnote{
-Some accusatives in Modern Greek always require a clitic \citep[see]{spyropoulos2011}. I assume this is because these are different types of accusatives \citep[see]{starke2017}.
+Some accusatives in Modern Greek always require a clitic \citep[see][]{spyropoulos2011}. I assume this is because these are different types of accusatives \citep[see][]{starke2017}.
 }
 
 In sum, Old English and Modern Greek are languages without case competition in their headless relatives. The relative pronoun always appears in the external case.
