--- a/presentations/defense/defense-presentation-finished.tex
+++ b/presentations/defense/defense-presentation-finished.tex
@@ -135,13 +135,13 @@
 \onslide<4->{
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}
 }
 
 \only<5>{
 \exg. *Ich {lade ein}, wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
 I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}
 }
 
 \vspace{1em}
@@ -149,13 +149,13 @@ I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc
 \onslide<7->{
 \exg. Uns besucht, \tbf{wen} \tbf{Maria} \tbf{mag}.\\
 us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
-`Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}
+`Who visits us, Maria likes.' \flushfill{Modern German, \pgcitealt{vogel2001}{343}}
 }
 
 \only<8>{
 \exg. *Uns besucht, wer \tbf{Maria} \tbf{mag}.\\
 us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc{nom}} Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
-`Who visits us, Maria likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}
+`Who visits us, Maria likes.' \flushfill{Modern German, \pgcitealt{vogel2001}{343}}
 }
 
 \vspace{1em}
@@ -163,13 +163,13 @@ us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc
 \onslide<10-12>{
 \exg. Uns besucht, \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
 us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} Maria trust\textcolor{red}{\scsub{[dat]}}\\
-`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}
+`Who visits us, Maria trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{343}}
 }
 
 \only<11>{
 \exg. *Uns besucht, wer \tbf{Maria} \tbf{vertraut}.\\
 us visit\textcolor{Turquoise}{\scsub{[nom]}} \tsc{rp}.\textcolor{Turquoise}{\tsc{nom}} Maria trust\textcolor{red}{\scsub{[dat]}}\\
-`Who visits us, Maria trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}
+`Who visits us, Maria trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{343}}
 }
 
 \end{frame}
@@ -210,28 +210,23 @@ that believe\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} -
 \pause
 {
 \center
+\textbf<4>{\tsc{int}} vs. \textbf<6>{\tsc{ext}}
 
-\begin{itemize}
-  \item \textbf<4>{winning case =
-  \tsc{int} case}
-  \item \textbf<6>{winning case =
-  \tsc{ext} case}
-
-  \citep[cf.][]{grosu1994,himmelreich2017,cinqueforthcoming}
-\end{itemize}
+\center
+\citep[cf.][]{vogel2001,grosu1994,himmelreich2017,cinqueforthcoming}
 }
 
 
 \onslide<3->{
 \exg. Ich {lade ein}, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}.\\
 I invite\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria trust\textcolor{red}{\scsub{[dat]}}\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}
 }
 
 \onslide<5->{
 \exg. *Ich vertraue, wem \tbf{auch} \tbf{Maria} \tbf{mag}. \\
 I trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
-`I trust whoever Maria also likes.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}
+`I trust whoever Maria also likes.' \flushfill{Modern German, \pgcitealt{vogel2001}{345}}
 }
 
 
@@ -307,7 +302,7 @@ I trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also M
 
   \exg. enti aer {ant uurta} demo \tbf{zaimo} \tbf{sprah}\\
   and he reply\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} {to him} speak\textcolor{Turquoise}{\scsub{[nom]}}\\
-  `and he replied to the one who spoke to him' \flushfill{Old High German, \tsc{mons} 7:24, adapted from \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
+  `and he replied to the one who spoke to him' \flushfill{Old High German, \tsc{mons} 7:24, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
 
 \pause
 
@@ -356,20 +351,23 @@ I trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also M
 
   \exg. *Jan lubi \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
   Jan like\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} ever tease\textcolor{red}{\scsub{[dat]}}\\
-  `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
+  `Jan likes whoever he teases.' \flushfill{Polish, \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
 
 \pause
 
   \exg. *Jan ufa komu \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
   Jan trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} ever let\textcolor{LimeGreen}{\scsub{[acc]}} to home\\
-  `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
+  `Jan trusts whoever he let into the house.' \flushfill{Polish, \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
 
 \pause
 
-\exg. Jan lubi kogo -kolkwiek Maria lubi.\\
+\only<5>{
+\exg. Jan lubi \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
  Jan like\textcolor{LimeGreen}{\scsub{[acc]}} \tsc{rp}.\textcolor{LimeGreen}{\tsc{acc}} ever Maria like\textcolor{LimeGreen}{\scsub{[acc]}}\\
- `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
+ `Jan likes whoever Maria likes.' \flushfill{Polish, \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}
+}
 
+ \pause
  \pause
 
   \begin{table}[H]
@@ -600,7 +598,7 @@ I trust\textcolor{red}{\scsub{[dat]}} \tsc{rp}.\textcolor{red}{\tsc{dat}} also M
 \center
 
 \onslide<8->{
-a single trigger
+a single cause
 }
 
 \vspace{2em}
@@ -754,7 +752,7 @@ a single trigger
 
     \pause
 
-\onslide{3-4}
+\only<3-4>{
     \begin{table}[H]
       \center
       \caption{Old High German pattern}
@@ -785,21 +783,21 @@ a single trigger
         \label{tbl:case-competition-int-ext}
     \end{table}
 
-  \pause
+    }
 
 \end{multicols}
-
-\vspace{-10em}
+  \pause
+  \pause
 
 \begin{table}[H]
   \center
   \begin{tabular}{lccc}
     \toprule
-                      & \tsc{int}                       & \onslide<6->{\citealt{vogel2001}}   & \onslide<7->{\citealt{himmelreich2017}} \\
-                      & = allowed to surface            & \onslide<6->{OT constraints}        & \onslide<7->{agree}                     \\
+                      & \tsc{int} may surface           & \onslide<7->{\citealt{vogel2001}}   & \onslide<8->{\citealt{himmelreich2017}} \\
+                      &                                 & \onslide<7->{OT constraints}        & \onslide<8->{agree}                     \\
        \cmidrule(lr){2-2} \cmidrule(lr){3-4}
-       Modern German  & yes                             & \onslide<6->{x » y}                 & \onslide<7->{no probe}                  \\
-       Polish         & no                              & \onslide<6->{y » x}                 & \onslide<7->{probe}                     \\
+       Modern German  & yes                             & \onslide<7->{x » y}                 & \onslide<8->{no probe}                  \\
+       Polish         & no                              & \onslide<7->{y » x}                 & \onslide<8->{probe}                     \\
      \bottomrule
   \end{tabular}
     \label{tbl:case-competition-none}
@@ -834,13 +832,13 @@ a single trigger
   \sout{light head\scsub{ext}} [relative pronoun\scsub{int} ... ]\label{ex:light+rel}
   }
 
-\onslide<3-5>{
+\only<3-5>{
   \exg. Ich umarme den, den ich mag.\\
   I hug \tsc{dem}.\tsc{acc} \tsc{rp}.\tsc{acc} I like\\
   `I hug him that I like.'
   }
 
-  \item \onslide<6->{deletion takes place when the relative pronoun contains the light head as a single constituent}
+  \item \onslide<6->{deletion of the light head takes place when the relative pronoun contains the light head as a single constituent}
   \item \onslide<7->{the relative pronoun contains the features of the light head plus an additional one}\\
   \onslide<7->{
   \begin{figure}[H]
@@ -1056,7 +1054,7 @@ internal syntax
 
 \exg. Ich lade \sout{n} ein, \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}.\\
 I invite\scsub{[acc]} \tsc{lh}.\tsc{acc} {} \tsc{rp}.\tsc{dat} also Maria trust\scsub{[dat]}\\
-`I invite whoever Maria also trusts.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep}
+`I invite whoever Maria also trusts.' \flushfill{Modern German, \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-rep}
 
 \pause
 
@@ -1466,7 +1464,7 @@ internal syntax
 
 \exg. *Jan lubi \sout{ogo} \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
 Jan like\scsub{[acc]} \tsc{lh}.\tsc{acc} \tsc{rp}.\tsc{dat} ever tease\scsub{[dat]}\\
-`Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-rel}
+`Jan likes whoever he teases.' \flushfill{Polish, \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-rel}
 
 \pause
 
@@ -1582,7 +1580,7 @@ Jan like\scsub{[acc]} \tsc{lh}.\tsc{acc} \tsc{rp}.\tsc{dat} ever tease\scsub{[da
 
 
 
-\begin{frame}[t]{\tsc{int}/\tsc{ext}}
+\begin{frame}[t]{The \tsc{int}/\tsc{ext} parameter}
 
   \pause
 
@@ -1590,7 +1588,7 @@ Jan like\scsub{[acc]} \tsc{lh}.\tsc{acc} \tsc{rp}.\tsc{dat} ever tease\scsub{[da
     \center
     \begin{tabular}{lcc}
       \toprule
-                        & \tsc{int} = allowed to surface  & \onslide<3->{ϕ + \tsc{k}}         \\
+                        & \tsc{int} may surface           & \onslide<3->{ϕ + \tsc{k}}         \\
          \cmidrule(lr){2-3}
          Modern German  & yes                             & \onslide<3->{portmanteau}         \\
          Polish         & no                              & \onslide<3->{separate morphemes}  \\
@@ -1787,178 +1785,137 @@ lexical entries → internal syntax → containment → deletion → headless re
 \end{frame}
 
 
-% \begin{frame}[t]{Conclusion}
-%
-% \pause
-%
-% two factors influence grammaticality\pause
-%
-% \begin{itemize}
-%   \item the stable \tsc{nom} < \tsc{acc} < \tsc{dat}\pause \onslide<5->{
-% \center
-%   \begin{forest} boom
-%     [\tsc{dat}P
-%         [\tsc{k}3]
-%         [\tsc{acc}P
-%             [\tsc{k}2]
-%             [\tsc{nom}P
-%                 [\tsc{k}1]
-%                 [XP]
-%             ]
-%         ]
-%     ]
-%   \end{forest}
-%
-% }
-%   \item the \tsc{int}/\tsc{ext} parameter\pause \onslide<6->{
-%
-% \begin{multicols}{2}
-%
-%   \begin{figure}[H]
-%     \begin{adjustbox}{max height=0.3\textheight}
-%     \centering
-%     \begin{tabular}[b]{ccc}
-%         \toprule
-%         light head & & relative pronoun \\
-%         \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-%         \begin{forest} boom
-%           [\tsc{k}P,
-%           tikz={
-%           \node[label=below:\tit{n},
-%           draw,circle,
-%           scale=0.75,
-%           fit to=tree]{};
-%           }
-%               [\tsc{k}]
-%               [ϕP
-%                   [\phantom{xxx}, roof, baseline]
-%               ]
-%           ]
-%         \end{forest}
-%         & \phantom{x} &
-%         \begin{forest} boom
-%           [\tsc{rel}P, s sep=15mm
-%               [\tsc{rel}P,
-%               tikz={
-%               \node[label=below:\tit{we},
-%               draw,circle,
-%               scale=0.75,
-%               fit to=tree]{};
-%               }
-%                   [\phantom{xxx}, roof]
-%               ]
-%               [\tsc{k}P,
-%               tikz={
-%               \node[label=below:\tit{m},
-%               draw,circle,
-%               scale=0.75,
-%               fit to=tree]{};
-%               }
-%                   [\tsc{k}]
-%                   [ϕP
-%                       [\phantom{xxx}, roof, baseline]
-%                   ]
-%               ]
-%           ]
-%         \end{forest}\\
-%         \bottomrule
-%     \end{tabular}
-%   \end{adjustbox}
-%     \label{fig:rel-lh-mg}
-%   \end{figure}
-%
-%   \begin{figure}[H]
-%       \begin{adjustbox}{max height=0.3\textheight}
-%     \centering
-%     \begin{tabular}[b]{ccc}
-%         \toprule
-%         light head & & relative pronoun \\
-%         \cmidrule(lr){1-1} \cmidrule(lr){3-3}
-%         \begin{forest} boom
-%         [\tsc{k}P, s sep = 15 mm
-%             [ϕP,
-%             tikz={
-%             \node[label=below:\tit{o},
-%             draw,circle,
-%             scale=0.85,
-%             fit to=tree]{};
-%             }
-%                 [\phantom{xxx}, roof]
-%             ]
-%             [\tsc{k}P,
-%             tikz={
-%             \node[label=below:\tit{go},
-%             draw,circle,
-%             scale=0.85,
-%             fit to=tree]{};
-%             }
-%                 [\tsc{k}, baseline]
-%             ]
-%         ]
-%         \end{forest}
-%         & \phantom{x} &
-%       \begin{forest} boom
-%         [\tsc{rel}P
-%             [\tsc{rel}P,
-%             tikz={
-%             \node[label=below:\tit{k},
-%             draw,circle,
-%             scale=0.85,
-%             fit to=tree]{};
-%             }
-%                 [\phantom{xxx}, roof, baseline]
-%             ]
-%             [\tsc{k}P, s sep = 15 mm
-%                 [ϕP,
-%                 tikz={
-%                 \node[label=below:\tit{o},
-%                 draw,circle,
-%                 scale=0.85,
-%                 fit to=tree]{};
-%                 }
-%                     [\phantom{xxx}, roof]
-%                 ]
-%                 [\tsc{k}P,
-%                 tikz={
-%                 \node[label=below:\tit{mu},
-%                 draw,circle,
-%                 scale=0.85,
-%                 fit to=tree]{};
-%                 }
-%                     [\tsc{k1}, baseline]
-%                 ]
-%             ]
-%         ]
-%       \end{forest}\\
-%         \bottomrule
-%     \end{tabular}
-%     \label{fig:rel-lh-matching}
-%   \end{adjustbox}
-%   \end{figure}
-%
-% \end{multicols}
-%
-% }
-%
-% \end{itemize}
-%
-% \pause
-% \pause
-% \pause
-%
-% two factors → one factor: \tbf{containment}
-%
-%
-%
-% \end{frame}
+\begin{frame}[t]{Conclusion}
+
+\pause
+
+two factors influence grammaticality\pause
+
+\begin{itemize}
+  \item the stable \tsc{nom} < \tsc{acc} < \tsc{dat}\pause
+\end{itemize}
+\onslide<5->{
+\center
+\begin{adjustbox}{max height=0.2\textheight}
+  \begin{forest} boom
+    [\tsc{dat}P
+        [\tsc{k}3]
+        [\tsc{acc}P
+            [\tsc{k}2]
+            [\tsc{nom}P
+                [\tsc{k}1]
+                [XP,baseline]
+            ]
+        ]
+    ]
+  \end{forest}
+\end{adjustbox}
+}
+\begin{itemize}
+  \item the \tsc{int}/\tsc{ext} parameter \pause
+\end{itemize}
+
+\vspace{-1em}
+
+  \onslide<6->{
 
 
-\include{references+appendix}
+\begin{multicols}{2}
 
+  \begin{adjustbox}{max width=0.5\textwidth}
 
+  \begin{forest} boom
+    [\tsc{acc}P,baseline
+        [\tsc{k}2]
+        [\tsc{nom}P
+            [\tsc{k}1]
+            [ϕP
+                [\phantom{xxx}, roof]
+            ]
+        ]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{n}}; }
+  \end{forest}
 
-extra stuff
-* cinque trees
-* ohg comparisons
+  \begin{forest} boom
+    [\tsc{dat}P,baseline
+        [\tsc{k}3]
+        [\tsc{acc}P
+            [\tsc{k}2]
+            [\tsc{nom}P
+                [\tsc{k}1]
+                [ϕP
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{m}}; }
+  \end{forest}
+
+  \begin{forest} boom
+    [\tsc{rel}P,baseline
+        [\phantom{xxx}, roof]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{we}}; }
+  \end{forest}
+
+  \end{adjustbox}
+
+  \begin{adjustbox}{max width=0.4\textwidth}
+
+  \begin{forest} boom
+    [ϕP,baseline
+        [\phantom{xxx}, roof]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{o}}; }
+  \end{forest}
+
+  \begin{forest} boom
+    [\tsc{acc}P,baseline
+        [\tsc{k}2]
+        [\tsc{nom}P
+            [\tsc{k}1]
+        ]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{go}}; }
+  \end{forest}
+
+  \begin{forest} boom
+    [\tsc{dat}P,baseline
+        [\tsc{k}3]
+        [\tsc{acc}P
+            [\tsc{k}2]
+            [\tsc{nom}P
+                [\tsc{k}1]
+            ]
+        ]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{mu}}; }
+  \end{forest}
+
+  \begin{forest} boom
+    [\tsc{rel}P,baseline
+        [\phantom{xxx}, roof]
+    ]
+    {\draw (.east) node[right]{⇔ \tit{k}}; }
+  \end{forest}
+
+  \end{adjustbox}
+
+\end{multicols}
+
+}
+
+\pause
+\pause
+\pause
+
+two factors → one factor: \pause
+\tbf{containment}
+
+\end{frame}
+
+\include{references_appendix}
 
 \end{document}
