--- a/presentations/fenna-files-presentation/packages.sty
+++ b/presentations/fenna-files-presentation/packages.sty
@@ -42,6 +42,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 \usetikzlibrary{shapes,arrows,positioning,shapes.geometric}
 
 \tikzstyle{question} = [diamond, minimum width=1cm, minimum height=1cm, text centered, text width=1.5cm, draw=black]
-\tikzstyle{outcome} = [rectangle, minimum width=1.2cm, minimum height=1.2cm, text centered, text width=1.2cm, draw=black]
+\tikzstyle{outcome} = [rectangle, minimum width=2cm, minimum height=1.2cm, text centered, text width=2cm, draw=black]
 \tikzstyle{example} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, text width=3cm, draw=white]
 \tikzstyle{arrow} = [thick,->,>=stealth]
+\tikzstyle{constituent-deletion} = [rectangle, rounded corners=2.5cm, draw=black]
